--- a/environment.yaml
+++ b/environment.yaml
@@ -13,6 +13,7 @@ dependencies:
     - lpips
     - albumentations==0.4.3
     - diffusers
+    - matplotlib
     - opencv-python==4.1.2.30
     - pudb==2019.2
     - invisible-watermark
